# treedect

./: .gitignore  .gitmodules  Cargo.toml  PACKAGING.md  build.rs  onnx_show.py  package.ps1
.cargo/: config.toml
onnxexport/: README.md
onnxexport/export/: export_dinov2.py  export_sam2.py  sam2_onnx.py  test_dinov2.py
onnxinfer/: sam2onnx.py
onnxsam/: README.md  sam2.patch
onnxsam/export/: export_dinov2.py  export_sam2.py  sam2_onnx.py  test_dinov2.py  test_sam2.py
src/: actions.rs  canvas.rs  components.rs  main.rs  worker.rs
src/models/: batcher.rs  cluster.py  cluster.rs  dam2.rs  dinov2.rs  mod.rs  sam2.rs
src/panels/: actions.rs  canvas.rs  central.rs  global.rs  left.rs  mod.rs  palette.rs  params.rs  right.rs  table.rs
src/utils/: mod.rs  save.rs  score.rs
tests/: test.rs
