[package]
name = "treedect"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.24.0", features = ["extern_crate_alloc"] }
eframe = "0.33.2"
env_logger = "0.11.8"
fast_image_resize = { version = "5.4.0", features = ["bytemuck", "image", "rayon"] }
futures = "0.3.31"
image = { version = "0.25.9", features = ["rayon"] }
indicatif = { version = "0.18.3", features = ["rayon"] }
log = "0.4.29"
ndarray = { version = "0.16.0", features = ["rayon"] }
ndarray-stats = "0.6.0"
ort = { version = "2.0.0-rc.10" }
phf = { version = "0.13.1", features = ["macros"] }
rand = "0.9.2"
rfd = "0.16.0"
tokio = { version = "1.0", features = ["full"] }
