[package]
name = "treedect"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.24.0", features = ["extern_crate_alloc"] }
eframe = "0.33.2"
egui_extras = "0.33.3"
env_logger = "0.11.8"
fast_image_resize = { version = "5.4.0", features = ["bytemuck", "image", "rayon"] }
futures = "0.3.31"
image = { version = "0.25.9", features = ["rayon"] }
imageproc = { version = "0.26.0", features = ["rayon"] }
indicatif = { version = "0.18.3", features = ["rayon"] }
log = "0.4.29"
ndarray = { version = "0.17.2", features = ["rayon"] }
ndarray-rand = "0.16.0"
ndarray-stats = "0.7.0"
numpy = "0.27.1"
ort = { version = "2.0.0-rc.11", features = ["directml"] }
phf = { version = "0.13.1", features = ["macros"] }
pyo3 = { version = "0.27.2", features = ["auto-initialize"] }
rand = "0.9.2"
rfd = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.0", features = ["full"] }
